hphp/hack/test/typecheck/collection_non_static.php.exp
File "collection_non_static.php", line 8, characters 38-41:
Invalid expression in constant initializer (Parsing[1002])
